2004-11-12    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main): SIGSEV corrected
	(main): more logging added and output clarified

2004-10-01    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main): A lot of more options added.
	(file_out, file_log): Added logging at various places.

2004-09-20    <tino@firebird.03.softkill.net>

	* test.sh: set added, to see new environment variable
	PTYBUFFER_PID

	* ptybuffer.c: Option -d disabled daemonization, such that you can
	easily run programs under ptybuffer from /etc/inittab or similar.
	(master_process): Minor Bugfix (found at code review): When not
	all data could be delivered to the terminal at once, some data
	might have hung in ptybuffer until the next data block to the
	terminal was ready.  This bug is likely to trigger only if you
	transfer huge amounts of data to the terminal, which usually is
	not done.
	(main): put the current PID of ptybuffer into the environment as
	PTYBUFFER_PID, such that child processes know how to send signals
	there.

2004-05-23    <tino@firebird.03.softkill.net>

	* ptybuffer.c (main): cd /
	(sock_process, master_process, deamonloop): on close the socket is
	destroyed and freed, so I cannot check against the file
	descriptor.  Close-handling corrected.

2004-05-22    <tino@firebird.03.softkill.net>

	* ptybuffer.c: ECHO_SEND now is no more the default (it's stupid,
	"stty echo" and "stty -echo" are much better).

2004-05-21    <tino@firebird.03.softkill.net>

	* stress.sh: Well, there is a strange bug.  The stress.sh script
	only loops less than 1000 times.  Looking why.  Note that you need
	my "accept" to be reachable in path to use the stress script.
	Weird.  I cannot prove the problem under RedHat 9 on my 466 MHz
	Celeron develop machine.  However on one of my fast SuSE 9 servers
	it segfaults within seconds.  Oh well, thanks to gdb, I see
	.. it's a memory issue, realloc cores, sigh.  OK, setting
	environment variable MALLOC_CHECK_=1 shows that I have some