@@ -1,3 +1,11 @@
+2006-01-30    <tino@firebird.03.softkill.net>
+
+	* ptybuffer.c (main, daemonloop, master_process): option -n hist
+
+2005-06-04    <tino@firebird.03.softkill.net>
+
+	* ptybuffer.c (connect_process): snprintf instead of sprintf
+
 2004-11-12    <tino@firebird.03.softkill.net>
 
 	* ptybuffer.c (main): SIGSEV corrected
